crates/apollo-compiler/test_data/diagnostics/0109_null_in_list_issue_738.txt
Error: expected value of type CustomScalar!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:14:16]
    │
  8 │   foo(arg: [CustomScalar!]!): String!
    │            ────────┬───────  
    │                    ╰───────── expected type declared here as CustomScalar!
    │ 
 14 │   a: foo(arg: [null, 1])
    │                ──┬─  
    │                  ╰─── provided value is of Null type
────╯
Error: expected value of type CustomScalar!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:15:16]
    │
  8 │   foo(arg: [CustomScalar!]!): String!
    │            ────────┬───────  
    │                    ╰───────── expected type declared here as CustomScalar!
    │ 
 15 │   b: foo(arg: [null, null, "hello"])
    │                ──┬─  
    │                  ╰─── provided value is of Null type
────╯
Error: expected value of type CustomScalar!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:15:22]
    │
  8 │   foo(arg: [CustomScalar!]!): String!
    │            ────────┬───────  
    │                    ╰───────── expected type declared here as CustomScalar!
    │ 
 15 │   b: foo(arg: [null, null, "hello"])
    │                      ──┬─  
    │                        ╰─── provided value is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:16:13]
    │
  9 │   bar(arg: [String!]): String!
    │            ────┬────  
    │                ╰────── expected type declared here as String!
    │ 
 16 │   bar(arg: [null])
    │             ──┬─  
    │               ╰─── provided value is of Null type
────╯
Error: expected value of type String!, found Null
    ╭─[0109_null_in_list_issue_738.graphql:17:27]
    │
  4 │   list: [String!]
    │         ────┬────  
    │             ╰────── expected type declared here as String!
    │ 
 17 │   list(arg: {list: ["ok", null]})
    │                           ──┬─  
    │                             ╰─── provided value is of Null type
────╯

